Improve Import from Clipboard

--- a/config.json.example
+++ b/config.json.example
@@ -120,6 +120,7 @@
           "region": "change this"
         },
         "s3bucket": "change this",
+        "s3cdn": "change this",
         "azure":
         {
           "connectionString": "change this",
