--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@node-saml/passport-saml": "^5.0.0",
     "@passport-next/passport-openid": "1.0.0",
     "Idle.Js": "git+https://github.com/shawnmclean/Idle.js",
     "archiver": "6.0.1",
     "async": "3.2.5",
-    "aws-sdk": "2.1542.0",
+    "aws-sdk": "^2.1589.0",
     "azure-storage": "2.10.7",
     "base64url": "3.0.1",
     "body-parser": "1.20.2",
@@ -36,7 +37,7 @@
     "deep-freeze": "0.0.1",
     "diff-match-patch": "git+https://github.com/hackmdio/diff-match-patch.git",
     "ejs": "3.1.9",
-    "express": "4.18.2",
+    "express": "^4.19.2",
     "express-session": "1.18.0",
     "file-type": "18.7.0",
     "formidable": "2.1.2",
@@ -80,7 +81,6 @@
     "passport-ldapauth": "3.0.1",
     "passport-local": "1.0.0",
     "passport-oauth2": "1.7.0",
-    "passport-saml": "3.2.4",
     "passport-twitter": "1.0.4",
     "passport.socketio": "3.7.0",
     "pdfobject": "2.2.12",
@@ -100,6 +100,7 @@
     "store": "2.0.12",
     "string": "3.3.3",
     "toobusy-js": "0.5.1",
+    "turndown-plugin-gfm": "^1.0.2",
     "umzug": "2.3.0",
     "uuid": "9.0.1",
     "validator": "13.11.0",
@@ -163,7 +164,7 @@
     "expose-loader": "1.0.3",
     "file-loader": "6.2.0",
     "file-saver": "2.0.5",
-    "flowchart.js": "1.17.1",
+    "flowchart.js": "^1.18.0",
     "fork-awesome": "1.2.0",
     "gist-embed": "2.6.0",
     "highlight.js": "10.7.3",
